--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "highcharts": "^6.0.7",
+    "@types/node": "^6.0.102",
+    "angular2-highcharts": "^0.5.5",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.5.6",
