--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nebular/theme": "^2.0.0-rc.7",
     "@ng-bootstrap/ng-bootstrap": "1.0.0",
     "@swimlane/ngx-charts": "7.0.1",
+    "@swimlane/ngx-datatable": "^13.0.1",
     "angular2-chartjs": "0.4.1",
     "angular2-toaster": "4.0.1",
     "bootstrap": "4.0.0",
