--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   },
   "dependencies": {
     "@agm/core": "1.0.0-beta.2",
-    "@angular/animations": "~5.2.6",
+    "@angular/animations": "^5.2.8",
+    "@angular/cdk": "^5.2.4",
     "@angular/common": "~5.2.6",
     "@angular/compiler": "~5.2.6",
     "@angular/core": "~5.2.6",
     "@angular/forms": "~5.2.6",
     "@angular/http": "~5.2.6",
+    "@angular/material": "^5.2.4",
     "@angular/platform-browser": "~5.2.6",
     "@angular/platform-browser-dynamic": "~5.2.6",
     "@angular/router": "~5.2.6",
@@ -55,6 +57,7 @@
     "core-js": "2.5.1",
     "echarts": "^4.0.2",
     "font-awesome": "4.7.0",
+    "hammerjs": "^2.0.8",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
