--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
   },
   "dependencies": {
     "@agm/core": "1.0.0-beta.2",
-    "@angular/animations": "^5.2.8",
+    "@angular/animations": "6.0.6",
     "@angular/cdk": "^5.2.4",
-    "@angular/common": "~5.2.6",
-    "@angular/compiler": "~5.2.6",
-    "@angular/core": "~5.2.6",
-    "@angular/forms": "~5.2.6",
-    "@angular/http": "~5.2.6",
+    "@angular/common": "6.0.6",
+    "@angular/compiler": "6.0.6",
+    "@angular/core": "6.0.6",
+    "@angular/forms": "6.0.6",
+    "@angular/http": "6.0.6",
     "@angular/material": "^5.2.4",
-    "@angular/platform-browser": "~5.2.6",
-    "@angular/platform-browser-dynamic": "~5.2.6",
-    "@angular/router": "~5.2.6",
+    "@angular/platform-browser": "6.0.6",
+    "@angular/platform-browser-dynamic": "6.0.6",
+    "@angular/router": "6.0.6",
     "@asymmetrik/ngx-leaflet": "3.0.1",
     "@nebular/auth": "^2.0.0-rc.7",
     "@nebular/security": "^2.0.0-rc.7",
@@ -69,17 +69,17 @@
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
-    "rxjs": "5.5.5",
+    "rxjs": "^6.2.1",
     "socicon": "3.0.5",
     "tinymce": "4.5.7",
     "typeface-exo": "0.0.22",
     "web-animations-js": "2.2.5",
-    "zone.js": "0.8.18"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.7.1",
-    "@angular/compiler-cli": "~5.2.6",
-    "@angular/language-service": "~5.2.6",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "6.0.6",
+    "@angular/language-service": "6.0.6",
     "@compodoc/compodoc": "1.0.1",
     "@types/googlemaps": "3.30.4",
     "@types/d3-color": "1.0.5",
@@ -105,6 +105,6 @@
     "ts-node": "3.2.2",
     "tslint": "5.7.0",
     "tslint-language-service": "0.9.6",
-    "typescript": "2.5.3"
+    "typescript": "2.7.2"
   }
 }
