--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "pace-js": "1.0.2",
     "roboto-fontface": "0.8.0",
     "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.1.0",
     "socicon": "3.0.5",
     "tinymce": "4.5.7",
     "typeface-exo": "0.0.22",
