--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ngx-admin",
+  "name": "healthboard",
   "version": "2.1.1",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/akveo/ngx-admin.git"
+    "url": "git+https://github.com/pick-one-fish/healthboard.git"
   },
   "bugs": {
-    "url": "https://github.com/akveo/ngx-admin/issues"
+    "url": "https://github.com/pick-one-fish/healthboard/issues"
   },
   "scripts": {
     "ng": "ng",
@@ -17,8 +17,8 @@
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test -sr",
     "test:coverage": "rimraf coverage && npm run test -- -cc",
-    "lint": "ng lint --type-check",
-    "lint:fix": "ng lint --fix",
+    "lint": "ng lint healthboard --type-check",
+    "lint:fix": "ng lint healthboard --fix",
     "lint:styles": "stylelint ./src/**/*.scss",
     "lint:ci": "npm run lint && npm run lint:styles",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
@@ -58,7 +58,6 @@
     "echarts": "^4.0.2",
     "font-awesome": "4.7.0",
     "hammerjs": "^2.0.8",
-    "intl": "1.2.5",
     "ionicons": "2.0.1",
     "leaflet": "1.2.0",
     "nebular-icons": "1.0.6",
