--- a/package.json
+++ b/package.json
@@ -57,18 +57,19 @@
     "@ng-bootstrap/ng-bootstrap": "2.2.2",
     "@swimlane/ngx-charts": "9.0.0",
     "@types/fhir-js-client": "^1.0.0",
-    "fhir-js-client": "^1.0.0",
-    "ng2-file-upload": "^1.3.0",
     "angular2-toaster": "^6.1.0",
     "bootstrap": "4.1.3",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.7",
     "devextreme": "^18.1.5",
     "devextreme-angular": "^18.1.5",
+    "fhir-js-client": "^1.0.0",
     "font-awesome": "4.7.0",
+    "hammerjs": "^2.0.8",
     "intl": "1.2.5",
     "ionicons": "4.3.0",
     "nebular-icons": "1.0.9",
+    "ng2-file-upload": "^1.3.0",
     "normalize.css": "8.0.0",
     "pace-js": "1.0.2",
     "raven-js": "^3.26.4",
