--- a/package.json
+++ b/package.json
@@ -40,21 +40,21 @@
     }
   },
   "dependencies": {
-    "@angular/animations": "^6.0.0",
+    "@angular/animations": "^7.0.4",
     "@angular/cdk": "^6.3.2",
-    "@angular/common": "6.1.2",
-    "@angular/compiler": "6.1.2",
-    "@angular/core": "6.1.2",
-    "@angular/forms": "6.1.2",
-    "@angular/http": "6.1.2",
+    "@angular/common": "7.0.4",
+    "@angular/compiler": "7.0.4",
+    "@angular/core": "7.0.4",
+    "@angular/forms": "7.0.4",
+    "@angular/http": "7.0.4",
     "@angular/material": "^6.4.3",
-    "@angular/platform-browser": "6.1.2",
-    "@angular/platform-browser-dynamic": "6.1.2",
-    "@angular/router": "6.1.2",
+    "@angular/platform-browser": "7.0.4",
+    "@angular/platform-browser-dynamic": "7.0.4",
+    "@angular/router": "7.0.4",
     "@nebular/auth": "2.0.0-rc.10",
     "@nebular/security": "2.0.0-rc.10",
     "@nebular/theme": "2.0.0-rc.10",
-    "@ng-bootstrap/ng-bootstrap": "2.2.2",
+    "@ng-bootstrap/ng-bootstrap": "4.0.0",
     "@swimlane/ngx-charts": "9.0.0",
     "@types/fhir-js-client": "^1.0.0",
     "fhir-js-client": "^1.0.0",
@@ -81,9 +81,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.1.2",
-    "@angular/compiler-cli": "6.1.2",
-    "@angular/language-service": "6.1.2",
+    "@angular/cli": "7.0.6",
+    "@angular/compiler-cli": "7.0.4",
+    "@angular/language-service": "7.0.4",
     "@compodoc/compodoc": "1.1.3",
     "@types/jasmine": "2.8.8",
     "@types/jasminewd2": "2.0.3",
@@ -106,8 +106,8 @@
     "ts-node": "7.0.0",
     "tslint": "5.11.0",
     "tslint-language-service": "0.9.9",
-    "typescript": "2.7.2",
-    "@angular-devkit/build-angular": "0.7.2",
+    "typescript": "3.1.6",
+    "@angular-devkit/build-angular": "~0.10.0",
     "validate-commit-msg": "^2.14.0"
   }
 }
