--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "@nebular/security": "2.0.0-rc.10",
     "@nebular/theme": "2.0.0-rc.10",
     "@ng-bootstrap/ng-bootstrap": "4.0.0",
-    "@swimlane/ngx-charts": "10.0.0",
     "@types/fhir-js-client": "^1.0.0",
     "fhir-js-client": "^1.0.0",
     "ng2-file-upload": "^1.3.0",
@@ -78,6 +77,7 @@
     "stream": "0.0.2",
     "typeface-exo": "0.0.54",
     "web-animations-js": "2.3.1",
+    "hammerjs": "^2.0.8",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
