chore: upgrade nebular@3.0.0

--- a/package.json
+++ b/package.json
@@ -51,9 +51,10 @@
     "@angular/platform-browser": "7.0.4",
     "@angular/platform-browser-dynamic": "7.0.4",
     "@angular/router": "7.0.4",
-    "@nebular/auth": "2.0.0-rc.10",
-    "@nebular/security": "2.0.0-rc.10",
-    "@nebular/theme": "2.0.0-rc.10",
+    "@nebular/auth": "3.0.0",
+    "@nebular/bootstrap": "3.0.0",
+    "@nebular/security": "3.0.0",
+    "@nebular/theme": "3.0.0",
     "@ng-bootstrap/ng-bootstrap": "4.0.0",
     "@types/fhir-js-client": "^1.0.0",
     "fhir-js-client": "^1.0.0",
